--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 crossterm = "0.27.0"
 ratatui = "0.24.0"
+futures = "0.3.29"
+tokio = {version="1.35.0", features=["macros", "sync", "rt-multi-thread"]}
+tokio-stream = "0.1.14"
+warp = "0.3.6"
